fix show-on-mobile on tablet

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -257,6 +257,10 @@
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 991.98px) {
+  .show-on-mobile {
+    display: none;
+  }
+
   .header__action-signup {
     padding: 8px 0;
   }
